--- a/2.DynamoCraft.UI/src/app/modules/projet/components/detail/detail.component.html
+++ b/2.DynamoCraft.UI/src/app/modules/projet/components/detail/detail.component.html
@@ -1,33 +1,45 @@
-<div class="container min-vh-75 py-5 bg-dc-2">
-    <!-- Titre du projet -->
-    <h2 class="text-center text-warning mb-4 display-4">{{ projet.nom }}</h2>
+<div class="container min-vh-75 d-flex flex-column justify-content-center py-5 bg-dc-2">
+    <!-- Titre du projet et catégorie -->
+    <div class="row align-items-center justify-content-center text-center mb-5">
+        <!-- Catégorie du projet -->
+        <div class="col-lg-4 d-flex align-items-center justify-content-center mb-3 mb-lg-0">
+            <div class="d-flex align-items-center" style="gap: 1rem;">
+                <img src="assets/png/Categories/{{ projet.categorie?.nom }}.png" class="rounded shadow-lg"
+                    alt="{{ projet.categorie?.nom }}" style="width: 75px; height: 75px; object-fit: cover; margin-left: 20px;">
+                <h2 class="text-warning font-dc mb-0">{{ projet.categorie?.nom }}</h2>
+            </div>
+        </div>
+        <!-- Titre du projet -->
+        <div class="col-lg-8 d-flex justify-content-center">
+            <h2 class="text-warning mb-0">{{ projet.nom | slice:0:20 }}...</h2>
+        </div>
+    </div>
+
 
     <!-- Flexbox container for equal height columns -->
     <div class="row d-flex align-items-stretch">
+        <!-- Section carrousel -->
         <div class="col-lg-7 mb-4 d-flex flex-column">
-            <!-- Carrousel principal (image principale ou modèle 3D) -->
             <div class="carousel slide shadow-lg rounded-custom bg-dc" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <!-- Afficher une image ou un modèle 3D selon l'élément sélectionné -->
                     <div class="carousel-item active">
                         <ng-container *ngIf="!is3DModelActive">
-                            <!-- Affichage de l'image -->
                             <img [src]="url + projet.imageProjet![activeIndex].nom" alt="{{ projet.nom }}"
                                 class="d-block w-100 img-fluid rounded-custom"
                                 style="max-height: 500px; object-fit: cover;">
                         </ng-container>
                         <ng-container *ngIf="is3DModelActive">
-                            <!-- Affichage du modèle 3D -->
                             <div #threeContainer class="three-container" style="width: 100%; height: 500px;"></div>
                         </ng-container>
                     </div>
                 </div>
 
-                <!-- Affichage du nom du fichier image ou du modèle 3D -->
+                <!-- Nom du fichier -->
                 <div class="text-center mt-3 d-flex justify-content-center">
                     <ng-container *ngIf="!is3DModelActive">
-                        <h3 class="text-warning">{{ formatFileName(projet.imageProjet![activeIndex].nom) | slice: 0: 15
-                            }}...</h3>
+                        <h3 class="text-warning">
+                            {{ formatFileName(projet.imageProjet![activeIndex].nom) | slice: 0: 15 }}...
+                        </h3>
                     </ng-container>
                     <ng-container *ngIf="is3DModelActive">
                         <h3 class="text-warning" *ngIf="selected3DFiles[active3DModelIndex]">
@@ -36,17 +48,14 @@
                     </ng-container>
                 </div>
 
-                <!-- Conteneur des miniatures avec les flèches -->
+                <!-- Miniatures -->
                 <div class="row mt-1 mb-1 align-items-center justify-content-between">
-                    <!-- Flèche gauche -->
                     <div class="col-lg-1 d-flex justify-content-center align-items-center">
                         <button class="btn btn-dark btn-lg" (click)="scrollLeft()"
                             [disabled]="thumbnailStartIndex === 0">
                             <i class="bi bi-chevron-left"></i>
                         </button>
                     </div>
-
-                    <!-- Miniatures -->
                     <div class="col-lg-10 d-flex justify-content-center">
                         <div class="d-flex justify-content-between overflow-hidden" style="max-width: 100%; gap: 8px;">
                             <div *ngFor="let item of visibleThumbnails; let i = index" class="thumbnail-wrapper">
@@ -66,8 +75,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- Flèche droite -->
                     <div class="col-lg-1 d-flex justify-content-center align-items-center">
                         <button class="btn btn-dark btn-lg" (click)="scrollRight()"
                             [disabled]="thumbnailStartIndex + visibleThumbnails.length >= combinedThumbnails.length">
@@ -78,13 +85,13 @@
             </div>
         </div>
 
-        <!-- Colonne de droite : Informations utilisateur -->
+        <!-- Informations utilisateur -->
         <div class="col-lg-5 d-flex flex-column">
             <div class="user-info bg-dc p-1 rounded-custom shadow-lg text-center text-light">
                 <h5 class="text-warning mb-4">Publié par</h5>
                 <div class="profile-image-wrapper mx-auto">
-                    <img [src]="url + projet.utilisateur.imageUtilisateur?.nom" class="image-card"
-                        alt="Utilisateur" (click)="navigateToUserProfile(projet.utilisateur.id)">
+                    <img [src]="url + projet.utilisateur.imageUtilisateur?.nom" class="image-card" alt="Utilisateur"
+                        (click)="navigateToUserProfile(projet.utilisateur.id)">
                 </div>
                 <h5>{{ projet.utilisateur.pseudo | slice: 0: 15 }}...</h5>
             </div>
@@ -127,7 +134,7 @@
     <!-- Description du projet -->
     <div class="row">
         <div class="col-lg-12 mx-auto">
-            <div class="project-details bg-dc p-4 rounded-custom mt-4 text-light shadow-lg">
+            <div class="bg-dc p-4 rounded-custom mt-4 text-light shadow-lg">
                 <h5 class="text-warning">Description :</h5>
                 <p>{{ projet.description }}</p>
             </div>
@@ -137,7 +144,6 @@
     <!-- Section des commentaires -->
     <div class="row mt-5">
         <div class="col-lg-12 mx-auto">
-            <!-- Formulaire pour ajouter un commentaire -->
             <div class="add-comment bg-dc p-4 rounded-custom shadow-lg mb-4 text-light">
                 <h5 class="text-warning">Ajouter un commentaire :</h5>
                 <form [formGroup]="commentaireForm" (ngSubmit)="addComment()">
@@ -146,7 +152,7 @@
                     <div *ngIf="commentaireForm.get('newCommentaire')?.touched">
                         <div *ngIf="commentaireForm.get('newCommentaire')?.errors?.['required']"
                             class="invalid-feedback d-block">
-                            Vous devez être connezcté pour envoyer une commentaire.
+                            Vous devez être connecté pour envoyer un commentaire.
                         </div>
                         <div *ngIf="commentaireForm.get('newCommentaire')?.errors?.['minlength']"
                             class="invalid-feedback d-block">
@@ -157,13 +163,12 @@
                             Le commentaire ne doit pas dépasser 500 caractères.
                         </div>
                     </div>
-                    <button class="btn btn-warning shadow" type="submit" [disabled]="commentaireForm.invalid">Commenter</button>
+                    <button class="btn btn-warning shadow" type="submit"
+                        [disabled]="commentaireForm.invalid">Commenter</button>
                 </form>
             </div>
             <h3 class="text-warning d-flex justify-content-center">Commentaires</h3>
-            <!-- Liste des commentaires -->
             <div class="comments-section mt-5">
-                <!-- Vérification s'il y a des commentaires -->
                 <ng-container *ngIf="commentaires.length > 0; else noCommentsTemplate">
                     <div class="comment bg-dc p-4 rounded-custom shadow-lg mb-3 text-light"
                         *ngFor="let commentaire of commentaires" [id]="'comment-' + commentaire.id">
@@ -171,12 +176,10 @@
                             <div>
                                 <h5 class="mb-1 text-warning">{{ commentaire.utilisateur?.pseudo }}</h5>
                                 <span class="small text-secondary">
-                                    <!-- Afficher la date de création si le commentaire n'a pas été modifié -->
                                     <ng-container
                                         *ngIf="commentaire.dateCreation === commentaire.dateModif; else modifDate">
                                         Publié le {{ commentaire.dateCreation | date:'medium' }}
                                     </ng-container>
-                                    <!-- Afficher la date de modification si le commentaire a été modifié -->
                                     <ng-template #modifDate>
                                         Modifié le {{ commentaire.dateModif | date:'medium' }}
                                     </ng-template>
@@ -202,15 +205,12 @@
                                 </button>
                             </div>
                         </div>
-                        <!-- Contenu du commentaire -->
                         <p *ngIf="editingCommentId !== commentaire.id" class="mb-0">{{ commentaire.description }}</p>
-                        <!-- Formulaire d'édition -->
                         <textarea [(ngModel)]="editingCommentContent" *ngIf="editingCommentId === commentaire.id"
                             class="form-control"></textarea>
                     </div>
                 </ng-container>
 
-                <!-- Template affiché lorsqu'aucun commentaire n'est présent -->
                 <ng-template #noCommentsTemplate>
                     <div class="no-comments p-5 text-center border border-warning rounded-custom">
                         <i class="bi bi-chat-dots-fill text-warning display-3"></i>
