--- a/2.DynamoCraft.UI/src/app/modules/utilisateur/components/realisations/realisations.component.html
+++ b/2.DynamoCraft.UI/src/app/modules/utilisateur/components/realisations/realisations.component.html
@@ -1,5 +1,5 @@
 <div class="container min-vh-75">
-    <h1 class="font-dc text-center text-warning mb-4">Réalisations de l'utilisateur</h1>
+    <h1 class="font-dc text-center text-warning mb-4">Mes réalisations</h1>
 
     <!-- Affichage des réalisations paginées -->
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 justify-content-center">
